tests/machine/x/java/group_by_left_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_left_join3333765603/001/Main.java:49: error: incompatible types: Object cannot be converted to DataClass2
			DataClass4 _row12 = new DataClass4(c, o);
			                                      ^
/tmp/TestCompileValidProgramsgroup_by_left_join3333765603/001/Main.java:62: error: bad operand type DataClass2 for unary operator '!'
		if (!(r.o)) continue;
		    ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


  1| let customers = [
  2|   { id: 1, name: "Alice" },